# tfa9866n3_4pa-mtk

tfa986x/: BUILD.bazel  tfa98xx.c  tfa_cal.c  tfa_container.c  tfa_dsp.c  tfa_init.c  tfa_stc.c
tfa986x/inc/: config.h  tfa98xx.h  tfa_container.h  tfa_device.h  tfa_internal.h
